# otus_cpp

./: .travis  .travis.yaml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  lib.hpp  main.cpp  tests.cpp
06_allocator.source/: allocator_traits.cpp
07_metaprogramming.source/: CMakeLists.txt  any.cpp  metafunctions.cpp  polymorphism.cpp  sfinae.cpp  variant.cpp
11_principles.source/: CMakeLists.txt  dependency_inversion.cpp  union.cpp
14_gof_structural.source/: CMakeLists.txt  adapter.cpp  bridge.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp  proxy.cpp
15_gof_behavioral_I.source/: CMakeLists.txt  chain_of_responsibility.cpp  command.cpp  interpreter.cpp  iterator.cpp  mediator.cpp  merge.cpp
16_gof_behavioral_II.source/: observer.cpp  state.cpp  strategy.cpp  visitor.cpp
23_multithreading.source/: CMakeLists.txt  async.cpp  condition.cpp  promise.cpp  raceconditions.cpp  thread.cpp
24_multithreading_patterns.source/: CMakeLists.txt  active_object.cpp  barrier.cpp  double_checked_locking.cpp  nuclear_reaction.cpp
25_lockfree_ds.source/: CMakeLists.txt  array.cpp  boost_lock_free.cpp  stack.cpp  stack_1.cpp  stack_2.cpp  stack_3.cpp  stack_4.cpp
lib/: CMakeLists.txt  arena_allocator.hpp  filter.cpp  filter.hpp  forward_list.hpp  handler.cpp  handler.h  ips_reverse_sort.cpp  ips_reverse_sort.hpp  logger.cpp  logger.h  reverse_sort.cpp  reverse_sort.hpp  types.hpp  utils.cpp  utils.hpp
